compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__access_int.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let x = 1 x.whatever

---

error: Unknown record field
  ┌─ /src/one/two.gleam:1:11
  │
1 │ let x = 1 x.whatever
  │           ^^^^^^^^^^ This field does not exist

The record being updated has this type:

    Int

It does not have any fields.

